# opendota-ml-pipeline

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  dvc.yaml  mlflow.db  pyproject.toml
.github/workflows/: ci-cd.yaml
app/: main.py
app/api/: dependencies.py  routes.py
app/api/endpoints/: predict.py
app/core/: config.py  exceptions.py
app/models/: schemas.py
app/services/: evidently_monitor.py  mlflow_tracker.py  model_serving.py  opendota_client.py
dags/: retrain_pipeline.py
k8s/: canary-deployment.yaml  deployment.yaml  hpa.yaml  ingress-canary.yaml  ingress-stable.yaml  service-canary.yaml  service.yaml
scripts/: verify-canary.sh
tests/: __init__.py  conftest.py  test_api.py
