[project]
name = "opendota-ml-pipeline"
version = "0.1.0"
description = "Production-ready ML pipeline for OpenDota API"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    "httpx>=0.27.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "prometheus-fastapi-instrumentator>=7.0.0",
    "mlflow>=2.11.0",
    "evidently>=0.7.21",
    "scikit-learn>=1.8.0",
    "dvc>=3.67.1",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.3.0",
    "mypy>=1.9.0"
]
